jenkins/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins
  labels:
    app: jenkins
spec:
  type: LoadBalancer
  ports:
    - name: jenkins
      port: 80
      targetPort: 8080
      protocol: TCP
    - name: jenkins-jnlp
      port: 50000
      protocol: TCP
  selector:
    app: jenkins
